Last commit for the Easter Weekend. Fixed: Paused the animation when pinned. Added a z-index to the .pinned flashcard. So it appears over the flashcards.
Todo:
Reset the position of the pinned flashcard to the left of the feed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -362,7 +362,8 @@ nav {
 }
 
 .pinned {
-	position: absolute;
+	position: fixed;
 	border-radius: 15px;
 	box-shadow: 1px 1px 7px 0px black;
+	z-index: 200;
 }
